1.0.0 (2014-04-10)
------------------

- Dropped support for Python 2.3 / 2.4.  Users of those Python versions
  should pin to earlier releases, (e.g., "meld3<1.0.0dev").

- Added compatibility with Python 3.2, 3.3, and 3.4.  Thanks to Scott
  Maxwell and Tres Seaver for contributing the patches.

- Installation now requires setuptools.

- The optional C extension has been removed.  It was only used internally
  by meld3, was not enabled by default, and did not support all meld3
  features.  The pure Python version has very acceptable performance.

- The license has been changed from ZPL 2.1 to the BSD-derived Repoze
  license, which is the same license used by Supervisor.

- Profiling scripts that had been used early in meld3 development have
  been removed.

- The example scripts example.py and melddiff.py have been removed.  See
  README.rst for the same example that was in example.py and the unit tests
  for examples of the ``diffmeld`` function.

- Support for using meld3 directly from the command line with
  ``python meld3.py <file> <mutator>`` has been removed.

0.6.10 (2012-11-27)
-------------------

- Fixed a bug where an exception could be raised when escaping certain
  attribute or cdata values.  This was caused by meld3 trying to use
  _encode_entity from xml.etree without importing it first.  Thanks to
  Jorge Puente Sarrin for contributing the patch.

0.6.9 (2012-09-12)
------------------

- Fixed a test failure that only occurred on some builds of
  Python 2.7 where parsing an unknown entity could raise
  an expat.error instead of SyntaxError.

0.6.8 (2012-01-12)
------------------

- Added the C extension source (cmeld3.c) to the release package
  by including it in MANIFEST.in.  Thanks to Soren Hansen for
  noticing it was missing from prior releases.

- Running setup.py will now halt on error if a compatible version
  of Python is not detected.

0.6.7 (2010-08-04)
------------------

- Make compatible with Python 2.7 (patch kindly contributed by